# dna-binder-wiki

./: CLAUDE.md  dna-binder-generation-report-print.md  index.md  log.md  pyproject.toml  requirements.txt  tp53-binder-report.md
.specify/: feature.json
analysis/: __init__.py  modularity.py  modules.py  normalize.py  pipeline.py  predict.py  quality.py  redundancy.py  similarity.py  wiki_output.py
analysis_output/: top10_per_target_method.csv
concepts/: all-atom-diffusion.md  atomic-motif-conditioning.md  autonomous-experiment-loop.md  classifier-free-guidance.md  motif-scaffolding.md  theozyme.md
entities/: alphafold3.md  autoresearch.md  david-baker.md  ligandmpnn.md  proteinmpnn.md  rfdiffusion.md  rfdiffusion2.md  rfdiffusion3.md  rosettafold-all-atom.md
scripts/: autoresearch_binder.py  autoresearch_phase4.py  autoresearch_targetdna.py  binder_program.md  collect_all_scores.py  find_modules.py  generate_alignment_figures.py  generate_all_targets.py  generate_binders.py  generate_comparison_figures.py  generate_figures.py  generate_target_dna.py  launch_autoresearch.sh  optuna_suggest.py  overnight_runner.py  run_analysis.py  score_all_targets.sh  score_complexes.py  update_csvs.py
summaries/: autoresearch-karpathy.md  rfd3-genome-editing-binders.md  rfdiffusion2-paper.md  rfdiffusion3-paper.md
syntheses/: autoresearch-for-binder-design.md  dna-binder-design-targets.md  dna-binder-generation-report.md
tests/: conftest.py  test_modules.py  test_normalize.py  test_redundancy.py  test_similarity.py  test_structural.py
(+11 files in other folders)
