[project]
name = "dna-binder-wiki"
version = "0.1.0"
description = "Modular DNA-binding protein discovery and redundancy analysis"
requires-python = ">=3.12"
dependencies = [
    "biopython",
    "numpy",
    "pandas",
    "requests>=2.33.1",
]

[project.optional-dependencies]
foundry = [
    "rc-foundry[all]",
]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "gpu: requires GPU and ESMFold model (run on remote server)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
